# social-video-explorer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  pyproject.toml  requirements.txt  smoke_test.py  test_runner.py
.specstory/: .project.json
.specstory/history/: 2025-11-17_01-31-49Z-voce-esta-rodando-via.md  2025-11-17_01-33-59Z-criar-repositorio-git-local.md  2025-11-17_01-33-59Z.md  2025-11-17_18-41-20Z-request-interrupted-by-user.md
core/: __init__.py  schemas.py
core/providers/: __init__.py  base.py  cache.py  circuit_breaker.py  meta.py  mock.py  oauth_client.py  rate_limiter.py
core/services/: __init__.py  search_service.py
openspec/: project.md
openspec/changes/add-meta-provider-prod/: README.md  tasks.md
openspec/changes/add-meta-provider-prod/deltas/: video-providers.md  video-search.md  video-ui.md
openspec/changes/add-meta-rate-limiting/: proposal.md  tasks.md
openspec/changes/add-setup-social-video-explorer/: proposal.md  tasks.md
openspec/changes/archive/2025-11-17-add-setup-social-video-explorer/: proposal.md  tasks.md
openspec/changes/archive/2025-11-18-add-meta-provider-prod/: mvp-implementation-guide.md  (+2 more)
openspec/changes/clean-spec-discipline/: README.md  proposal.md  tasks.md
openspec/specs/video-providers/: spec.md
openspec/specs/video-search/: spec.md
openspec/specs/video-ui/: spec.md
tests/: __init__.py  test_cache.py  test_circuit_breaker.py  test_integration.py  test_oauth_client.py  test_providers.py  test_rate_limiter.py  test_schemas.py  test_search_service.py
ui/: streamlit_app.py
(+18 files in other folders)
